# quicktest

./: Dockerfile  Makefile  README.md  docker-compose.yaml  mqtt.xml
docs/: setup-overview.drawio
py_srvcli/: CMakeLists.txt  package.xml  setup.py
py_srvcli/py_srvcli/: TwinCAT_Add_Route.py  client_member_function.py
py_srvcli/resource/: PLC_Info.txt  com_comfig.yaml
tc31-xar-base/: Dockerfile  entrypoint.sh
tc31-xar-base/TwinCAT/: TcRegistry.xml
tc31-xar-base/apt-config/: bhf.conf  bhf.list  debian.sources.list
